--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,48 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
+# 操作系统缓存文件
+.DS_Store
+Thumbs.db
+
+# macOS 元数据
+.AppleDouble
+.LSOverride
+Icon
+
+# Windows 缩略图缓存
+ehthumbs.db
+Desktop.ini
+
+# 临时文件
+*.tmp
+*.temp
+*.bak
+
+# VSCode 配置（如不需要同步）
 .vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+
+# Node 项目（如果你会用到前端处理工具）
+node_modules/
+dist/
+build/
+
+# Python 虚拟环境（如你用脚本处理图片）
+venv/
+__pycache__/
+
+# 图片处理工具的缓存文件（如 ImageMagick / 压缩工具）
+*.cache/
+.cache/
+
+# 不需要的缩略图目录（如果你用脚本生成）
+thumbnails/
+thumbs/
+
+# 日志
+*.log
+
+# IDE/编辑器配置文件
+.idea/
+*.iml
+
+# Git 自动合并留下的临时文件
+*.orig
+
